// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Networks /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c12 {
  margin-bottom: 0.75rem;
}

.c10 {
  padding: 8rem;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c13 {
  color: rgb(151,151,151);
  text-align: center;
}

.c8 {
  width: calc(100% - 0.125rem);
  background: transparent;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <h3
    className="c7"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c8 c9"
    disabled={false}
    name="card"
  >
    <div
      className="c10"
    >
      <div
        className="c11"
      >
        <div
          className="c12"
        >
          <svg
            height={60}
            viewBox="0 0 79 60"
            width={79}
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Guilty_Salamander
            </title>
            <desc>
              Created using Figma
            </desc>
            <use
              fill="#FAA427"
              transform="translate(23.8 22)"
              xlinkHref="#a"
            />
            <use
              fill="#F3722C"
              transform="translate(27.3 25.5)"
              xlinkHref="#b"
            />
            <use
              fill="#FAA427"
              transform="translate(4.8 32.1)"
              xlinkHref="#c"
            />
            <use
              fill="#F3722C"
              transform="translate(12.2 31.8)"
              xlinkHref="#d"
            />
            <use
              fill="#FAA427"
              transform="translate(54.4 31.9)"
              xlinkHref="#e"
            />
            <use
              fill="#F3722C"
              transform="translate(54.4 32)"
              xlinkHref="#f"
            />
            <use
              fill="#FAA427"
              transform="translate(15.8 26.8)"
              xlinkHref="#g"
            />
            <use
              fill="#FAA427"
              transform="translate(5)"
              xlinkHref="#h"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-15.13 41.037 5.45)"
              xlinkHref="#i"
            />
            <use
              fill="#412B13"
              transform="rotate(-15.13 67.273 -24.78)"
              xlinkHref="#j"
            />
            <use
              fill="#F3722C"
              transform="translate(2.2 8)"
              xlinkHref="#k"
            />
            <use
              fill="#FAFBFC"
              transform="rotate(-74.87 40.46 -20.511)"
              xlinkHref="#l"
            />
            <use
              fill="#412B13"
              transform="rotate(-74.87 41.364 -22.098)"
              xlinkHref="#m"
            />
            <use
              fill="#F3722C"
              transform="translate(52.1 8)"
              xlinkHref="#n"
            />
            <use
              fill="#F3722C"
              transform="translate(31.5 34.3)"
              xlinkHref="#o"
            />
            <use
              fill="#F3722C"
              transform="translate(14.3)"
              xlinkHref="#p"
            />
            <use
              fill="#F3722C"
              transform="translate(30.9 18.9)"
              xlinkHref="#q"
            />
            <use
              fill="#F3722C"
              transform="translate(37.6 18.9)"
              xlinkHref="#r"
            />
            <use
              fill="#FAA427"
              transform="translate(27.4 53.9)"
              xlinkHref="#s"
            />
            <use
              fill="#FAA427"
              transform="translate(39.1 53.9)"
              xlinkHref="#t"
            />
            <use
              fill="#F3722C"
              transform="translate(27.4 53.9)"
              xlinkHref="#u"
            />
            <use
              fill="#342013"
              transform="translate(28.6 26.2)"
              xlinkHref="#v"
            />
            <use
              fill="#FFF"
              transform="translate(32.6 28.7)"
              xlinkHref="#w"
            />
            <defs>
              <path
                d="M54.921 36.053L0 0l1.413 24.908c.359 6.249 5.752 11.145 12.283 11.145H54.92z"
                id="a"
              />
              <path
                d="M42.12 32.526L13.47 0 0 23.737c.282 4.924 4.527 8.778 9.672 8.778l32.448.01z"
                id="b"
              />
              <path
                d="M3.326 17.01a3.312 3.312 0 0 1-1.545-6.25C6.059 8.52 8.482 2.226 8.52 2.165a3.313 3.313 0 0 1 6.216 2.296c-.133.354-3.312 8.717-9.86 12.145-.475.26-1.008.4-1.55.403z"
                id="c"
              />
              <path
                d="M5.079 9.205A28.654 28.654 0 0 0 7.287 4.75a3.312 3.312 0 1 0-6.183-2.296C.781 3.234.412 3.996 0 4.734c1.33 1.181 3.544 3.152 5.079 4.471z"
                id="d"
              />
              <path
                d="M11.682 17.27a3.312 3.312 0 0 0 1.545-6.248C8.95 8.78 6.526 2.487 6.504 2.427A3.312 3.312 0 1 0 .316 4.723c.126.353 3.312 8.717 9.853 12.145.464.254.983.393 1.513.403z"
                id="e"
              />
              <path
                d="M2.45 9.01A28.33 28.33 0 0 1 .242 4.553a3.312 3.312 0 1 1 6.21-2.296c.326.78.695 1.54 1.104 2.28C6.187 5.719 3.973 7.69 2.45 9.009z"
                id="f"
              />
              <path
                d="M35.159 0H6.542A6.542 6.542 0 0 0 0 6.542v14.016a6.542 6.542 0 0 0 6.542 6.541h28.617a6.541 6.541 0 0 0 6.541-6.541V6.542A6.542 6.542 0 0 0 35.16 0z"
                id="g"
              />
              <path
                d="M54.254 0H9.026A9.026 9.026 0 0 0 0 9.026v17.207a9.026 9.026 0 0 0 9.026 9.025h45.228a9.026 9.026 0 0 0 9.025-9.026V9.027A9.026 9.026 0 0 0 54.253 0z"
                id="h"
              />
              <path
                d="M9.721 18.637c5.37 0 9.721-4.172 9.721-9.319C19.442 4.172 15.09 0 9.722 0 4.351 0 0 4.172 0 9.318c0 5.147 4.352 9.319 9.721 9.319z"
                id="i"
              />
              <path
                d="M5.19 9.959c2.865 0 5.188-2.23 5.188-4.98C10.378 2.23 8.055 0 5.19 0S0 2.23 0 4.98c0 2.75 2.323 4.979 5.19 4.979z"
                id="j"
              />
              <path
                d="M7.262.351C2.078 1.753-1.018 6.921.306 11.89l18.77-5.073C17.705 1.847 12.411-1.045 7.261.35z"
                id="k"
              />
              <path
                d="M9.318 19.442c5.147 0 9.319-4.352 9.319-9.72C18.637 4.351 14.465 0 9.318 0 4.172 0 0 4.352 0 9.721c0 5.37 4.172 9.721 9.318 9.721z"
                id="l"
              />
              <path
                d="M4.98 10.378c2.75 0 4.979-2.323 4.979-5.189S7.729 0 4.979 0C2.23 0 0 2.323 0 5.19c0 2.865 2.23 5.188 4.98 5.188z"
                id="m"
              />
              <path
                d="M11.819.351c5.178 1.402 8.28 6.57 6.95 11.538L0 6.816C1.347 1.847 6.635-1.045 11.819.35z"
                id="n"
              />
              <path
                d="M5.106 4.897A5.007 5.007 0 0 0 10.218 0H0a5.001 5.001 0 0 0 5.106 4.897z"
                id="o"
              />
              <path
                d="M0 0l22.258 18.498L44.516 0H0z"
                id="p"
              />
              <path
                d="M2.445 0A2.396 2.396 0 0 0 0 2.342h4.885a2.39 2.39 0 0 0-2.44-2.34z"
                id="q"
              />
              <path
                d="M2.462 0A2.396 2.396 0 0 0 0 2.343h4.885A2.39 2.39 0 0 0 2.462 0z"
                id="r"
              />
              <path
                d="M0 0h6.227v3.091A3.047 3.047 0 0 1 3.18 6.14h-.127A3.047 3.047 0 0 1 .006 3.09V0H0z"
                id="s"
              />
              <path
                d="M.006 0H6.22v3.091A3.047 3.047 0 0 1 3.174 6.14h-.127A3.047 3.047 0 0 1 0 3.09V0h.006z"
                id="t"
              />
              <path
                d="M31.328 0H0v1.474h31.328V0z"
                id="u"
              />
              <path
                d="M15.422 1.503A17.422 17.422 0 0 0 8.113.002 17.4 17.4 0 0 0 .805 1.503a1.457 1.457 0 0 0 .629 2.76h2.572V4.06a1.579 1.579 0 0 1 2.126-1.468 6.194 6.194 0 0 0 3.963 0 1.574 1.574 0 0 1 2.12 1.468v.204h2.572a1.463 1.463 0 0 0 .635-2.76z"
                id="v"
              />
              <path
                d="M6.072.104a6.194 6.194 0 0 1-3.963 0A1.579 1.579 0 0 0 0 1.573v.204h8.209v-.204A1.573 1.573 0 0 0 6.072.104z"
                id="w"
              />
            </defs>
          </svg>
        </div>
        <h3
          className="c13 c7"
        >
          You have no networks attached to this instance
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <Networks error /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c8 {
  margin-bottom: 1.875rem;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c12 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c10 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  min-width: 0.75rem;
  background-color: rgb(0,152,88);
  background-color: rgb(210,67,58);
}

.c11 {
  padding: 1.125rem 1.125rem;
}

.c13 {
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <h3
    className="c7"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c8"
  >
    <div
      className="c9"
    >
      <div
        className="c10"
      />
      <div
        className="c11"
      >
        <h4
          className="c12"
        >
          Ooops!
        </h4>
        <p
          className="c13 c6"
        >
          An error occurred while loading your networks
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <Networks loading /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c9 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c10 {
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c11 {
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1.25rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c12 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <h3
    className="c7"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c8"
  >
    <svg
      height="10"
      width="28"
    >
      <rect
        className="c9"
        height="6"
        width="6"
        x="2"
        y="2"
      />
      <rect
        className="c10 c9"
        height="6"
        width="6"
        x="11"
        y="2"
      />
      <rect
        className="c11 c9"
        height="6"
        width="6"
        x="20"
        y="2"
      />
    </svg>
    <p
      className="c12 c6"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`renders <Networks networks /> without throwing 1`] = `
.c2 {
  margin-bottom: 1.125rem;
}

.c9 {
  margin-bottom: 1.875rem;
}

.c19 {
  margin-right: 1.875rem;
}

.c22 {
  margin-right: 0.375rem;
}

.c23 {
  margin-top: 1.125rem;
}

.c14 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c17 {
  padding: 1.875rem;
}

.c6 {
  color: rgb(73,73,73);
  margin: 0;
  line-height: 1.5rem;
  font-size: 0.9375rem;
}

.c1 {
  margin-right: auto;
  margin-left: auto;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c8 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c0 {
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c7 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
}

.c15 {
  margin: 0;
  color: rgb(73,73,73);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  -webkit-text-fill-color: currentcolor;
  color: rgb(255,255,255);
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c10 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c12 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c24 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c27 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgb(73,73,73);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c16 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  background-color: transparent;
}

.c11 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  max-width: 100%;
  border-top: 0;
  border-left: 0;
  border-right: 0;
}

.c25 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  max-width: 100%;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  box-shadow: none;
}

.c26 {
  width: 2.875rem;
  min-width: 2.875rem;
  min-height: 2.875rem;
  max-width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-width: 0;
  border-radius: 0;
  box-shadow: none;
}

.c13 {
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c5 {
  font-weight: 200;
}

@media only screen and (min-width:48em) {
  .c1 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    width: 59rem;
  }
}

@media only screen and (min-width:0em) {
  .c4 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c4 {
    -webkit-flex-basis: 58.333333333333336%;
    -ms-flex-preferred-size: 58.333333333333336%;
    flex-basis: 58.333333333333336%;
    max-width: 58.333333333333336%;
  }
}

@media only screen and (min-width:0em) {
  .c8 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c8 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        <p
          className="c5 c6"
        >
          Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
           
          <a
            href="https://docs.joyent.com/public-cloud/network/sdn"
            rel="noopener noreferrer"
            target="__blank"
          >
            Read the docs
          </a>
        </p>
      </div>
    </div>
  </div>
  <h3
    className="c7"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c3"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
          disabled={false}
          name="card"
        >
          <div
            className="c11 c12"
            disabled={false}
            name="card-header"
          >
            <div
              className="c13 c12"
              disabled={false}
              name="card-header-meta"
            >
              <div
                className="c14"
              >
                <h4
                  className="c15"
                >
                  name
                </h4>
              </div>
            </div>
          </div>
          <div
            className="c16 c10"
            disabled={false}
            name="card-outlet"
          >
            <div
              className="c17"
            >
              <div
                className="c2"
              >
                <p
                  className="c6"
                >
                  description
                </p>
              </div>
              <div
                className="c18"
              >
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="16"
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            viewBox="0 0 12 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Private
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="16.2"
                            viewBox="0 0 16.2 16.2"
                            width="16.2"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.2,6.61a17.42,17.42,0,0,0-3.37-.26,11.67,11.67,0,0,1-.47-4A15.72,15.72,0,0,1,16,2.59l.2-1a16,16,0,0,0-3.77-.24A11,11,0,0,1,12.59.2l-1-.2a14.09,14.09,0,0,0-.2,1.46A8.44,8.44,0,0,0,7.82,2.68c-.15.1-.31.19-.47.28A15.07,15.07,0,0,1,7.59.2l-1-.2a16.37,16.37,0,0,0-.26,3.37,11.66,11.66,0,0,1-4,.46A15.6,15.6,0,0,1,2.59.2l-1-.2a16.29,16.29,0,0,0-.25,3.77C.67,3.7.21,3.61.2,3.61l-.2,1c.07,0,.63.12,1.46.19a8.48,8.48,0,0,0,1.22,3.6A5.3,5.3,0,0,1,3,8.85,17.52,17.52,0,0,1,.2,8.61l-.2,1a16.66,16.66,0,0,0,3,.26h.4a11.71,11.71,0,0,1,.46,4A17,17,0,0,1,.2,13.61l-.2,1a16.66,16.66,0,0,0,3,.26l.8,0c-.07.7-.16,1.16-.16,1.17l1,.2c0-.07.12-.63.19-1.46a8.49,8.49,0,0,0,3.6-1.23c.15-.1.3-.18.46-.27A16.88,16.88,0,0,1,8.61,16l1,.2a17,17,0,0,0,.25-3.37,11.73,11.73,0,0,1,4-.47A17.13,17.13,0,0,1,13.61,16l1,.2a17.28,17.28,0,0,0,.24-3.77,11,11,0,0,1,1.17.16l.2-1a14.09,14.09,0,0,0-1.46-.2,8.45,8.45,0,0,0-1.23-3.59c-.1-.15-.18-.31-.27-.47A15.07,15.07,0,0,1,16,7.59ZM8.38,3.51a7.26,7.26,0,0,1,3-1,13.17,13.17,0,0,0,.44,3.93,9.35,9.35,0,0,0-3.51,1A8.4,8.4,0,0,1,7.39,4,6.75,6.75,0,0,0,8.38,3.51ZM2.48,4.84H3a12.4,12.4,0,0,0,3.44-.44,9.35,9.35,0,0,0,1,3.51A8.38,8.38,0,0,1,4,8.8a6.18,6.18,0,0,0-.53-1A7.36,7.36,0,0,1,2.48,4.84Zm5.34,7.84a7.22,7.22,0,0,1-3,1A12.61,12.61,0,0,0,4.4,9.78a9,9,0,0,0,3.52-1,8.43,8.43,0,0,1,.88,3.37A7.11,7.11,0,0,0,7.82,12.68Zm5.9-1.33a13.23,13.23,0,0,0-3.94.44,9,9,0,0,0-1-3.51,8.44,8.44,0,0,1,3.38-.89,6.69,6.69,0,0,0,.52,1A7.13,7.13,0,0,1,13.72,11.35Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Fabric network
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="17"
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            version="1.1"
                            viewBox="0 0 17 17"
                            width="17"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          >
                            <g
                              transform="translate(-1105 974)"
                            >
                              <g>
                                <g>
                                  <use
                                    fill="rgb(73, 73, 73)"
                                    transform="translate(1105 -974)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <use
                                    fill="rgb(73, 73, 73)"
                                    transform="translate(1111 -974)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <use
                                    fill="rgb(73, 73, 73)"
                                    transform="translate(1117 -974)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <use
                                    fill="rgb(73, 73, 73)"
                                    transform="translate(1105 -968)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1111 -968)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1117 -968)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1105 -962)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1111 -962)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgb(73, 73, 73)"
                                      transform="translate(1117 -962)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                              </g>
                            </g>
                            <defs>
                              <path
                                d="M 2.5 5C 3.88071 5 5 3.88071 5 2.5C 5 1.11929 3.88071 0 2.5 0C 1.11929 0 0 1.11929 0 2.5C 0 3.88071 1.11929 5 2.5 5Z"
                                id="c"
                              />
                              <path
                                d="M 2.5 1C 3.3 1 4 1.7 4 2.5C 4 3.3 3.3 4 2.5 4C 1.7 4 1 3.3 1 2.5C 1 1.7 1.7 1 2.5 1ZM 2.5 0C 1.1 0 0 1.1 0 2.5C 0 3.9 1.1 5 2.5 5C 3.9 5 5 3.9 5 2.5C 5 1.1 3.9 0 2.5 0Z"
                                id="d"
                              />
                            </defs>
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          2 instances
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c23"
              >
                <div
                  className="c24"
                  disabled={false}
                  name="card"
                >
                  <div
                    className="c25 c24"
                    disabled={false}
                    name="card-header"
                    onClick={[Function]}
                  >
                    <div
                      className="c13 c24"
                      disabled={false}
                      name="card-header-meta"
                    >
                      <div
                        className="c14"
                      >
                        <p
                          className="c6"
                        >
                          Network information
                        </p>
                      </div>
                    </div>
                    <div
                      className="c26 c27"
                      disabled={false}
                      name="card-header-box"
                    >
                      <svg
                        height="6"
                        style={
                          Object {
                            "transform": "rotate(0deg)",
                          }
                        }
                        viewBox="0 0 9.6 6"
                        width="9.6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                          fill="rgb(73, 73, 73)"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c23"
              >
                <div
                  className="c24"
                  disabled={false}
                  name="card"
                >
                  <div
                    className="c25 c24"
                    disabled={false}
                    name="card-header"
                    onClick={[Function]}
                  >
                    <div
                      className="c13 c24"
                      disabled={false}
                      name="card-header-meta"
                    >
                      <div
                        className="c14"
                      >
                        <p
                          className="c6"
                        >
                          Instances on network
                        </p>
                      </div>
                    </div>
                    <div
                      className="c26 c27"
                      disabled={false}
                      name="card-header-box"
                    >
                      <svg
                        height="6"
                        style={
                          Object {
                            "transform": "rotate(0deg)",
                          }
                        }
                        viewBox="0 0 9.6 6"
                        width="9.6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                          fill="rgb(73, 73, 73)"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <div
          className="c10"
          disabled={false}
          name="card"
        >
          <div
            className="c11 c12"
            disabled={false}
            name="card-header"
          >
            <div
              className="c13 c12"
              disabled={false}
              name="card-header-meta"
            >
              <div
                className="c14"
              >
                <h4
                  className="c15"
                >
                  name2
                </h4>
              </div>
            </div>
          </div>
          <div
            className="c16 c10"
            disabled={false}
            name="card-outlet"
          >
            <div
              className="c17"
            >
              <div
                className="c2"
              >
                <p
                  className="c6"
                >
                  description2
                </p>
              </div>
              <div
                className="c18"
              >
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="16"
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            viewBox="0 0 12 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Private
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c19"
                >
                  <div
                    className="c20"
                  >
                    <div
                      className="c21"
                    >
                      <div
                        className="c20"
                      >
                        <div
                          className="c22"
                        >
                          <svg
                            height="13"
                            viewBox="0 0 9 13"
                            width="9"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0,0V13H9V0ZM7,11H2V2H7ZM3,4H6V3H3ZM3,6H6V5H3ZM3,8H6V7H3Z"
                              fill="rgb(73, 73, 73)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c20"
                      >
                        <p
                          className="c6"
                        >
                          Data center network
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
